--- a/cenfoteca-master/src/main/webapp/resources/view2/view2.html
+++ b/cenfoteca-master/src/main/webapp/resources/view2/view2.html
@@ -1,81 +1,88 @@
 <div class="container">
-    <h3 class="text-center">Crear Alquiler</h3>
-    <hr>
+	<div>
+		<h3 class="page-header">
+			Rents <small>List</small>
+		</h3>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div>
+				<div class="container">
+
+					<table class="table">
+						<thead>
+							<tr>
+								<th class="hidden">ID</th>
+								<th>Name</th>
+								<th>Description</th>
+								<th>Type</th>
+								<th>Actions</th>
+							</tr>
+						</thead>
+						<tbody ng-repeat="alquiler in alquileres">
+							<tr>
+								<td class="hidden">{{alquiler.idAlquiler}}</td>
+								<td>{{alquiler.name}}</td>
+								<td>{{alquiler.description}}</td>
+								<td>{{alquiler.tipoAlquiler.name}}</td>
+								<td>
+									<button class="btn btn-info btn-xs col-md-4" ng-class=""
+										ng-click="loadData(alquiler)">Edit</button>
+									<button class="btn btn-danger btn-xs col-md-4"
+										ng-click="deleteRent(alquiler)">Delete</button>
+								</td>
+
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
 </div>
 
 <div class="container">
-	<form id="createRentForm"  name="createRentForm" class="form-horizontal" role="form">
-		<div class='form-group'>
-			<div ng-class="{error: onError && createRentForm.email.$invalid}">
-				<label class='col-sm-3 control-label'>Rent Type</label>
-				<div class="col-sm-8">
-					<select name="tipoalquiler" id="tipoalquiler" class="form-control"
-						ng-model="requestObject.idTipoAlquiler"
-						ng-options="ta.idTipoAlquiler as ta.name for ta in tipoAlquilerList"
-						required>
-					</select> 
-					<span
-						ng-show="onError && createRentForm.tipoalquiler.$error.required"
-						class="help-inline">Required
-					</span>
+	<div class='form-group'>
+		<div ng-class="{error: onError && createRentForm.name.$invalid}">
+
+			<div class="col-sm-8">
+				<input type="text" id="alquilerName" class="form-control"
+					placeholder="Name" ng-model="name" required /> <br> <input
+					type="text" id="alquilerDescription" required class="form-control"
+					placeholder="Description" ng-model="description" /> <span
+					ng-show="onError && createRentForm.name.$error.required"
+					class="help-inline">Required </span> <br> <select
+					name="tipoalquiler" id="tipoalquiler" class="form-control"
+					ng-model="requestObject.idTipoAlquiler"
+					ng-options="ta.idTipoAlquiler as ta.name for ta in tipoAlquilerList"
+					required>
+				</select> <span
+					ng-show="onError && createRentForm.tipoalquiler.$error.required"
+					class="help-inline">Required </span> <br>
+				<div class='form-group'>
+					<div
+						ng-class="{error: onError && createRentForm.inputfile.$invalid}">
+						<label class='col-sm-3 control-label'>Cover Image</label>
+
+						<div class="col-sm-8">
+							<input type="file" name="inputfile" required
+								ng-file-select="onFileSelect($files)"> <span
+								ng-show="onError && createRentForm.inputfile.$error.required"
+								class="help-inline">Required </span>
+						</div>
+
+					</div>
+					<button id="createButton" class="btn btn-primary"
+						ng-click="saveRent($event)">Create</button>
+					<button id="updateButton" class="btn btn-primary hidden"
+						ng-click="updateRent($event)">Update</button>
 				</div>
+
 			</div>
 		</div>
-	
-		<div class='form-group'>
-			<div ng-class="{error: onError && createRentForm.name.$invalid}">
-				<label class='col-sm-3 control-label'>Name</label>
-				<div class="col-sm-8">
-					<input type="text" id="name" class="form-control"
-						name="name" placeholder="Required" required
-						ng-model="requestObject.name" 
-					/> 
-					<span
-						ng-show="onError && createRentForm.name.$error.required"
-						class="help-inline">Required
-					</span>
-				</div>
-			</div>
-		</div>
-	
-		<div class='form-group'>
-			<div ng-class="{error: onError && createRentForm.description.$invalid}">
-				<label class='col-sm-3 control-label'>Description</label>
-				<div class="col-sm-8">
-					<textarea id="description" class="form-control" rows="3"
-						name="description" placeholder="Required" required
-						ng-model="requestObject.description">
-					</textarea>
-					<span
-						ng-show="onError && createRentForm.description.$error.required"
-						class="help-inline">Required
-					</span>
-				</div>
-			</div>
-		</div>
-	
-		<div class='form-group'>
-			<div ng-class="{error: onError && createRentForm.inputfile.$invalid}">
-				<label class='col-sm-3 control-label'>Cover Image</label>
-				
-				<div class="col-sm-8">
-					<input type="file" name="inputfile" required ng-file-select="onFileSelect($files)" >
-					<span
-						ng-show="onError && createRentForm.inputfile.$error.required"
-						class="help-inline">Required
-					</span>
-				</div>
-	
-			</div>
-		</div>
-		
-		<button class="btn btn-primary" ng-click="saveRent($event)">Create</button>
-		<button class="btn btn-primary" ng-click="updateRent($event)">Update</button>
-		<!-- clear button todo -->
-	</form>
-	
-	<div class="container">
-	<div class="row">
-		 <div ng-click="doClick($index, $event)" ui-grid="{ data: alquileres }" class="myGrid"></div>
 	</div>
+
+
 </div>
