--- a/cenfoteca-master/src/main/webapp/resources/view1/view1.html
+++ b/cenfoteca-master/src/main/webapp/resources/view1/view1.html
@@ -1,11 +1,8 @@
 <div class="container">
-    <h3 class="text-center">Usuarios</h3>
-    
-    <hr>
-</div>
-
-<div class="container">
 	<div class="row">
+		    <h3 class="text-center">User List</h3>   
+    		<hr>
+	
 		 <div ui-grid="{ data: usuarios }" class="myGrid"></div>
 		 
 	</div>
