--- a/cenfoteca-master/src/main/webapp/resources/view2/view2.html
+++ b/cenfoteca-master/src/main/webapp/resources/view2/view2.html
@@ -63,12 +63,10 @@
 				</div>
 				<div class='form-group'>
 						<label>Cover Image</label>
-	
+						<img ng-src="{{rentFile || DEFAULT_IMAGE}}" width="150px" height="150px"/>
 						<div class="col-sm-8">
-							<input type="file" name="inputfile" required
-								ng-file-select="onFileSelect($files)"> <span
-								ng-show="onError && createRentForm.inputfile.$error.required"
-								class="help-inline">Required </span>
+							<input type="file" name="inputfile" ng-file-select="onFileSelect($files)">
+							<span ng-show="onError && createRentForm.inputfile.$error.required" class="help-inline">Required </span>
 						</div>
 				</div>
 					
@@ -76,7 +74,7 @@
 					ng-click="saveRent($event)">Create</button>
 					
 				<button id="updateButton" class="btn btn-primary hidden"
-					ng-click="updateRent($event)">Update</button>	
+					ng-click="saveRent($event)">Update</button>	
 			</form>					
 		</div>
 	</div>
