--- a/cenfoteca-master/src/main/webapp/resources/view2/view2.html
+++ b/cenfoteca-master/src/main/webapp/resources/view2/view2.html
@@ -1,87 +1,100 @@
-<div class="container">
-	<br>
-	
-		<h1 class="">Crear Alquiler <button type="button" class="btn btn-info btn-lg pull-right"
-			data-toggle="modal" data-target="#myModal">Create</button></h1>
-		
-</div>
 <br>
+<br>
+<div class="container">
+	<div class="row">
+		<h3 class="">
+			Rentals
+			<button type="button" class="btn btn-success pull-right col-md-2"
+				ng-click="openCreateModal()">Create</button>
+		</h3>
+		<hr>
+
+		<div>
+			<div class="container">
+
+				<table class="table">
+					<thead>
+						<tr>
+							<th class="hidden">ID</th>
+							<th>Name</th>
+							<th>Description</th>
+							<th>Type</th>
+							<th>Actions</th>
+						</tr>
+					</thead>
+					<tbody ng-repeat="alquiler in alquileres">
+						<tr>
+							<td class="hidden">{{alquiler.idAlquiler}}</td>
+							<td>{{alquiler.name}}</td>
+							<td>{{alquiler.description}}</td>
+							<td>{{alquiler.tipoAlquiler.name}}</td>
+							<td class="">
+								<button class="btn btn-info btn-sm col-md-3" ng-class=""
+									ng-click="loadData(alquiler)">Edit</button>
+								<button class="btn btn-danger btn-sm col-md-3"
+									ng-click="deleteRent(alquiler)">Delete</button>
+							</td>
+
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+
+	</div>
+</div>
+
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id="editCreaterent" class="modal fade" role="dialog">
 	<div class="modal-dialog">
+
 		<!-- Modal content-->
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4 class="modal-title">Modal Header</h4>
+				<h4 class="modal-title">Create Rent</h4>
 			</div>
 			<div class="modal-body">
-				<form id="createRentForm" name="createRentForm"
-					class="form-horizontal" role="form">
-					<div class='form-group'>
-						<div ng-class="{error: onError && createRentForm.email.$invalid}">
-							<label class='col-sm-3 control-label'>Rent Type</label>
-							<div class="col-sm-8">
-								<select name="tipoalquiler" id="tipoalquiler"
-									class="form-control" ng-model="requestObject.idTipoAlquiler"
-									ng-options="ta.idTipoAlquiler as ta.name for ta in tipoAlquilerList"
-									required>
-								</select> <span
-									ng-show="onError && createRentForm.tipoalquiler.$error.required"
-									class="help-inline">Required </span>
-							</div>
-						</div>
+				<form>
+					<div class="form-group">
+						<label>Name</label> <input type="text" id="alquilerName"
+							class="form-control" ng-model="name" required />
 					</div>
 
-					<div class='form-group'>
-						<div ng-class="{error: onError && createRentForm.name.$invalid}">
-							<label class='col-sm-3 control-label'>Name</label>
-							<div class="col-sm-8">
-								<input type="text" id="name" class="form-control" name="name"
-									placeholder="Required" required ng-model="requestObject.name" />
-								<span ng-show="onError && createRentForm.name.$error.required"
-									class="help-inline">Required </span>
-							</div>
-						</div>
+					<div class="form-group">
+						<label>Description</label> <input type="text"
+							id="alquilerDescription" required class="form-control"
+							ng-model="description" />
 					</div>
 
+					<div class="form-group">
+						<label>Rental type</label> <select name="tipoalquiler"
+							id="tipoalquiler" class="form-control"
+							ng-model="requestObject.idTipoAlquiler"
+							ng-options="ta.idTipoAlquiler as ta.name for ta in tipoAlquilerList"
+							required>
+						</select>
+					</div>
 					<div class='form-group'>
-						<div
-							ng-class="{error: onError && createRentForm.description.$invalid}">
-							<label class='col-sm-3 control-label'>Description</label>
-							<div class="col-sm-8">
-								<textarea id="description" class="form-control" rows="3"
-									name="description" placeholder="Required" required
-									ng-model="requestObject.description">
-					</textarea>
-								<span
-									ng-show="onError && createRentForm.description.$error.required"
-									class="help-inline">Required </span>
-							</div>
+						<label>Cover Image</label> <img
+							ng-src="{{rentFile || DEFAULT_IMAGE}}" width="150px"
+							height="150px" />
+						<div class="col-sm-8">
+							<input type="file" name="inputfile"
+								ng-file-select="onFileSelect($files)"> <span
+								ng-show="onError && createRentForm.inputfile.$error.required"
+								class="help-inline">Required </span>
 						</div>
 					</div>
-
-					<div class='form-group'>
-						<div
-							ng-class="{error: onError && createRentForm.inputfile.$invalid}">
-							<label class='col-sm-3 control-label'>Cover Image</label>
-
-							<div class="col-sm-8">
-								<input type="file" name="inputfile" required
-									ng-file-select="onFileSelect($files)"> <span
-									ng-show="onError && createRentForm.inputfile.$error.required"
-									class="help-inline">Required </span>
-							</div>
-
-						</div>
-					</div>
-					<!-- clear button todo -->
 				</form>
 			</div>
 			<div class="modal-footer">
-				<button class="btn btn-primary" ng-click="saveRent($event)">Create</button>
-				<button class="btn btn-primary" ng-click="updateRent($event)">Update</button>
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			<button id="createButton" class="btn btn-primary"
+						ng-click="saveRent($event)">Create</button>
+
+					<button id="updateButton" class="btn btn-primary hidden"
+						ng-click="saveRent($event)">Update</button>
+				<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 			</div>
 		</div>
 
@@ -89,9 +102,4 @@
 </div>
 
 
-<div class="container">
-	<div class="row">
-		<div ng-click="doClick($index, $event)" ui-grid="{ data: alquileres }"
-			class="myGrid"></div>
-	</div>
-</div>
+
