--- a/cenfoteca-master/src/main/webapp/resources/view3/view3.html
+++ b/cenfoteca-master/src/main/webapp/resources/view3/view3.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<h3 class="">
 			Users type
-			<button type="button" class="btn btn-success pull-right" ng-click="openCreateModal()">Create</button>
+			<button type="button" class="btn btn-success pull-right col-md-2" ng-click="openCreateModal()">Create</button>
 		</h3>
 		<hr>
 
@@ -43,7 +43,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4 class="modal-title">Modal Header</h4>
+				<h4 class="modal-title">Create User Type</h4>
 			</div>
 			<div class="modal-body">
 				<form>
@@ -56,7 +56,7 @@
 
 
 				</form>
-			</div>
+			</div>	
 			<div class="modal-footer">
 				<button id="createButton" class="btn btn-primary"
 					ng-click="saveTypeUser($event)">Create</button>
